[package]

name = "qht"
version = "0.1.0"
authors = ["Rémi Géraud-Stewart <remi.geraud@ens.fr>"]
description = "Implementation of Quotient Hash Tables variants QHTc, QHTdc, qQHTdc"
license = "MIT"

[dependencies]
rand = "0.6.1"
rust-dense-bitset = "0.1.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
