[package]
name = "qht"
version = "0.1.0"
authors = ["Rémi Géraud-Stewart <remi.geraud@ens.fr>", "Stanislas Plessia <stplessia@gmail.com>"]
description = "Implementation of Quotient Hash Tables variants QHTc, QQHTc, QQHTDc"
license = "MIT"
edition = "2018"
keywords = ["algorithm", "data-structures", "duplicate", "detection"]
categories = ["algorithms", "data-structures", "encoding"]

readme = "README.md"
repository = "https://github.com/ovheurdrive/qht-rs"
homepage = "https://github.com/ovheurdrive/qht-rs"
documentation = "https://docs.rs/qht"

[badges]
travis-ci = { repository = "ovheurdrive/qht-rs" }

[dependencies]
rand = "0.6.1"
rust-dense-bitset = "0.1.1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
